--- a/WebContent/WEB-INF/classes/jdbc.properties
+++ b/WebContent/WEB-INF/classes/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql:///mybatis?useUnicode=true&characterEncoding=UTF-8
 username=root
-password=mayude
+password=acbee
 #定义初始连接数
 initialSize=0
 #定义最大连接数
